feat: nova estrutura da lista

--- a/player_ts/style.css
+++ b/player_ts/style.css
@@ -5,7 +5,12 @@
 }
 
 .tabela{
-    position:fixed;
     border: solid 1px black;
     align-items: center;
+}
+
+th, td, tr{
+    border: 1px solid #ccc;
+    padding: 10px;
+    text-align: center;
 }
